--- a/.travis.yml
+++ b/.travis.yml
@@ -67,6 +67,7 @@ before_script:
 script:
   - yarn package
   - yarn test
+  - yarn test-e2e
   
 
 # NOTE: Remove this if your project is private and you don't have a paid greenkeeper account
